# immich-prometheus-exporter

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  cog.toml  docker-compose.yml  example-config.env  immich-v1.137.3-openapi-spec.json  pyproject.toml  renovate.json5  requirements.txt
.forgejo/workflows/: python-main.yml  python-pr.yml  python.yml
grafana/: immic-stats-dashboard.json
src/immich_prometheus_exporter/: __init__.py  main.py
tests/: __init__.py  test_duplicate_help_type.py  test_immich_exporter.py
