[build-system]
requires = ["uv_build>=0.8.9"]
build-backend = "uv_build"

[project]
name = "immich-prometheus-exporter"
version = "2.0.5"
description = "A Python script that exports Immich statistics as Prometheus metrics"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Oluf Lorenzen" }]
keywords = ["immich", "prometheus", "metrics", "exporter", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "requests>=2.25.0",
    "rich>=10.0.0",
    "prometheus-client>=0.22.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "responses>=0.20.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
    "types-requests>=2.25.0",
]

[project.urls]
Homepage = "https://git.h.oluflorenzen.de/finkregh/immich-prometheus-exporter"
Repository = "https://git.h.oluflorenzen.de/finkregh/immich-prometheus-exporter"
Issues = "https://git.h.oluflorenzen.de/finkregh/immich-prometheus-exporter/issues"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "responses>=0.25.8",
    "typing-extensions>=4.14.1",
]

[project.scripts]
immich-prometheus-exporter = "immich_prometheus_exporter:app"

#[tool.hatch.build.targets.wheel]
#packages = ["src/immich_prometheus_exporter"]

#[tool.hatch.build.targets.sdist]
#include = ["/src", "/tests", "/README.md", "/pyproject.toml"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["immich_prometheus_exporter"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
